# wakefield

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  meson.build  test-compositor.c  test-embedded.c  test-embedding.c  wakefield-compositor.c  wakefield-compositor.h  wakefield-data-device.c  wakefield-private.h  wakefield-seat.c  wakefield-surface.c
protocol/: meson.build
src/: meson.build  wakefield-compositor.c  wakefield-compositor.h  wakefield-data-device.c  wakefield-private.h  wakefield-surface.c
tests/: meson.build  test-compositor.c  test-embedded.c  test-embedding.c
